# outpatient-flow-analytics-openshift

./: .gitignore  Containerfile.analytics  Containerfile.analytics-cpu  Containerfile.etl  Containerfile.generator  Containerfile.viewer  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/: copilot-instructions.md
.github/skills/nfd/: SKILL.md
.github/skills/nvidia-gpu/: SKILL.md
.github/skills/openshift-gitops/: SKILL.md
.github/skills/openshift-pipelines/: SKILL.md
.github/workflows/: build-images.yaml
db/: schema.sql  seed.sql
docs/: cluster-provisioning.md
openshift/: 00-namespaces.yaml  01-secrets.yaml  02-edge-postgres.yaml  03-central-postgres.yaml  04-data-generator-job.yaml  05-etl-cronjob.yaml  06-gpu-analytics-job.yaml  07-network-policies.yaml  08-report-viewer.yaml  09-service-accounts.yaml  10-resource-quotas.yaml
openshift/apps/central-analytics/: db-init-job.yaml  kustomization.yaml  secrets.yaml  service-accounts.yaml
openshift/apps/edge-collector/: db-init-job.yaml  kustomization.yaml  secrets.yaml  service-accounts.yaml
openshift/apps/shared-infra/: kustomization.yaml  scc-rbac.yaml
openshift/argocd/: app-of-apps.yaml  openshift-pipelines-app.yaml
openshift/tekton/: 01-tasks.yaml  03-pipeline.yaml  04-rbac.yaml  05-pipelinerun.yaml
src/analytics/: analytics.py  report.py
src/etl/: batch_etl.py
src/generator/: catalog.py  generate.py
src/viewer/: app.py
tests/: test_analytics.py  test_catalog.py  test_etl.py  test_generator.py
(+22 files in other folders)
